[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://fonts/ButtonStyle.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Oxanium-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://textures/slider.png" type="Texture" id=5]
[ext_resource path="res://scenes/robots.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/sfx/SelectMenut.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/music/Gnossienne-No1.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=11]
size = 200
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=10]
size = 170
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_top = 30.0
expand_margin_bottom = 30.0
shadow_size = 5
shadow_offset = Vector2( 1, 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="Environment" id=13]
background_mode = 1
background_color = Color( 0.717647, 0.717647, 0.717647, 1 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Main/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "fade_in"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Main/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ), Vector2( 1920, 1080 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Main/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1920, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ), Vector2( 1920, 1080 ) ]
}

[node name="Menu" type="Spatial"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleLabel" type="Label" parent="Main"]
margin_left = 40.0
margin_top = 112.0
margin_right = 1144.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 11 )
text = "TELEPATHY"

[node name="Play" type="Button" parent="Main"]
margin_left = 160.0
margin_top = 560.0
margin_right = 453.0
margin_bottom = 711.0
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 1, 0.262745, 0.262745, 1 )
custom_colors/font_color = Color( 1, 0.262745, 0.262745, 1 )
custom_colors/font_color_hover = Color( 0.552941, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.0588235, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Play"

[node name="Settings" type="Button" parent="Main"]
margin_left = 160.0
margin_top = 768.0
margin_right = 737.0
margin_bottom = 919.0
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 1, 0.262745, 0.262745, 1 )
custom_colors/font_color = Color( 1, 0.262745, 0.262745, 1 )
custom_colors/font_color_hover = Color( 0.552941, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.0588235, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "Settings"

[node name="ColorRect" type="ColorRect" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MusicLabel" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -228.0
margin_right = 317.0
margin_bottom = -57.0
custom_fonts/font = SubResource( 10 )
text = "Volume:"

[node name="MusicSlider" type="HSlider" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -52.0
margin_right = 432.0
margin_bottom = 76.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 12 )
min_value = -30.0
max_value = 0.0

[node name="BackButton" type="Button" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 108.0
margin_right = 173.0
margin_bottom = 259.0
custom_colors/font_color_disabled = Color( 0.294118, 0.294118, 0.294118, 1 )
custom_colors/font_color_focus = Color( 1, 0.262745, 0.262745, 1 )
custom_colors/font_color = Color( 1, 0.262745, 0.262745, 1 )
custom_colors/font_color_hover = Color( 0.552941, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.0588235, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Back"

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.673798, 0.159285, -0.721543, -0.00192071, 0.976864, 0.213855, 0.738913, -0.142709, 0.658515, -5.19304, 1.50861, -7.41474 )
fov = 90.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[node name="robots" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.217394, 0, -0.976084, 0, 1, 0, 0.976084, 0, 0.217394, 0, 0, -9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.370591, 0.683013, 0.62941, -0.683013, -0.258819, 0.683013, 0.62941, -0.683013, 0.370591, 3.27182, 4, -7.51446 )

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( -0.729845, -0.345916, -0.589634, -0.524519, 0.836516, 0.158494, 0.438413, 0.42495, -0.791967, -1.75594, 2.59756, -10.972 )

[node name="DirectionalLight3" type="DirectionalLight" parent="."]
transform = Transform( 0.249592, 0.329056, -0.910728, -0.524519, 0.836516, 0.158494, 0.813992, 0.438136, 0.381384, -3.95303, 2.59756, -7.52264 )

[node name="SelectMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/fade_in = SubResource( 15 )
anims/fade_out = SubResource( 16 )

[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="value_changed" from="Settings/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="Settings/BackButton" to="." method="_on_BackButton_pressed"]
